--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
 		</ul>
 	</div>	
 	<span class="image object">
-		<img src="images/pic10.jpg" alt="" />
+		<img src="https://images.pexels.com/photos/7096/people-woman-coffee-meeting.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" />
 	</span>
 </section>
 <!-- Section -->
