--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@ layout: default
 <section id="banner">
 	<div class="content">
 		<header>
-			<h1>Hi, I’m Editorial<br />by HTML5 UP</h1>
-			<p>A free and fully responsive site template</p>
+			<h1>Find<br />Freelancers<br />Online</h1>
 		</header>
-		<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+		<p>Hire expert freelancers for any job</p>
 		<ul class="actions">
-			<li><a href="#" class="button big">Learn More</a>
+			<li><a href="#" class="button primary big">Hire</a>
+			</li>
+			<li><a href="#" class="button big">Work</a>
 			</li>
 		</ul>
 	</div>	
