--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@ layout: default
 <!-- Section -->
 <section>
 	<header class="major">
-		<h2>Erat lacinia</h2>
+		<h2>Serving As</h2>
 	</header>
 	<div class="features">
 		<article>
-			<span class="icon fa-gem"></span>
+			<span class="icon fa-bolt"></span>
 			<div class="content">
-				<h3>Portitor ullamcorper</h3>
+				<h3>Electricians</h3>
 				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 			</div>
 		</article>
 		<article>
-			<span class="icon solid fa-paper-plane"></span>
+			<span class="icon solid fa-shower-plane"></span>
 			<div class="content">
-				<h3>Sapien veroeros</h3>
+				<h3>Plumbers</h3>
 				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 			</div>
 		</article>
 		<article>
-			<span class="icon solid fa-rocket"></span>
+			<span class="icon solid fa-leaf"></span>
 			<div class="content">
-				<h3>Quam lorem ipsum</h3>
+				<h3>Gardners</h3>
 				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 			</div>
 		</article>
 		<article>
-			<span class="icon solid fa-signal"></span>
+			<span class="icon solid fa-camera-retro"></span>
 			<div class="content">
-				<h3>Sed magna finibus</h3>
+				<h3>Photographers</h3>
 				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 			</div>
 		</article>
@@ -59,74 +59,32 @@ layout: default
 <!-- Section -->
 <section>
 	<header class="major">
-		<h2>Ipsum sed dolor</h2>
+		<h2>Serving In</h2>
 	</header>
 	<div class="posts">
 		<article>
 			<a href="#" class="image">
 				<img src="images/pic01.jpg" alt="" />
 			</a>
-			<h3>Interdum aenean</h3>
-			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-			<ul class="actions">
-				<li><a href="#" class="button">More</a>
-				</li>
-			</ul>
+			<h3>Nagpur</h3>
 		</article>
 		<article>
 			<a href="#" class="image">
 				<img src="images/pic02.jpg" alt="" />
 			</a>
-			<h3>Nulla amet dolore</h3>
-			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-			<ul class="actions">
-				<li><a href="#" class="button">More</a>
-				</li>
-			</ul>
+			<h3>Mumbai</h3>
 		</article>
 		<article>
 			<a href="#" class="image">
 				<img src="images/pic03.jpg" alt="" />
 			</a>
-			<h3>Tempus ullamcorper</h3>
-			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-			<ul class="actions">
-				<li><a href="#" class="button">More</a>
-				</li>
-			</ul>
+			<h3>Pune</h3>
 		</article>
 		<article>
 			<a href="#" class="image">
 				<img src="images/pic04.jpg" alt="" />
 			</a>
-			<h3>Sed etiam facilis</h3>
-			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-			<ul class="actions">
-				<li><a href="#" class="button">More</a>
-				</li>
-			</ul>
-		</article>
-		<article>
-			<a href="#" class="image">
-				<img src="images/pic05.jpg" alt="" />
-			</a>
-			<h3>Feugiat lorem aenean</h3>
-			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-			<ul class="actions">
-				<li><a href="#" class="button">More</a>
-				</li>
-			</ul>
-		</article>
-		<article>
-			<a href="#" class="image">
-				<img src="images/pic06.jpg" alt="" />
-			</a>
-			<h3>Amet varius aliquam</h3>
-			<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
-			<ul class="actions">
-				<li><a href="#" class="button">More</a>
-				</li>
-			</ul>
+			<h3>Nashik</h3>
 		</article>
 	</div>
 </section>
