--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@ layout: default
 <!-- Section -->
 <section>
 	<header class="major">
-		<h2>Serving As</h2>
+		<h2>Top Categories</h2>
 	</header>
 	<div class="features">
 		<article>
-			<span class="icon fa-bolt"></span>
+			<span class="icon solid fa-bolt"></span>
 			<div class="content">
 				<h3>Electricians</h3>
 				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
 			</div>
 		</article>
 		<article>
-			<span class="icon solid fa-shower-plane"></span>
+			<span class="icon solid fa-shower"></span>
 			<div class="content">
 				<h3>Plumbers</h3>
 				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
