--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@ layout: default
 			<span class="icon solid fa-bolt"></span>
 			<div class="content">
 				<h3>Electricians</h3>
-				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+				<em>Don’t be shocked when electricians turn up on time!</em>
 			</div>
 		</article>
 		<article>
 			<span class="icon solid fa-shower"></span>
 			<div class="content">
 				<h3>Plumbers</h3>
-				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+				<em>Don’t let your plumbing problems back up on you.</em>
 			</div>
 		</article>
 		<article>
 			<span class="icon solid fa-leaf"></span>
 			<div class="content">
-				<h3>Gardners</h3>
-				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+				<h3>Gardeners</h3>
+				<em>A beautiful garden is a work of heart.</em>
 			</div>
 		</article>
 		<article>
 			<span class="icon solid fa-camera-retro"></span>
 			<div class="content">
 				<h3>Photographers</h3>
-				<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+				<em>Photo bombing is not okay.</em>
 			</div>
 		</article>
 	</div>
