--- a/index.html
+++ b/index.html
@@ -63,28 +63,16 @@ layout: default
 	</header>
 	<div class="posts">
 		<article>
-			<a href="#" class="image">
-				<img src="images/pic01.jpg" alt="" />
+			<a href="{{ site.url }}/nagpur" class="image">
+				<img src="images/nagpur.jpg" alt="" />
 			</a>
 			<h3>Nagpur</h3>
 		</article>
 		<article>
 			<a href="#" class="image">
-				<img src="images/pic02.jpg" alt="" />
+				<img src="images/mumbai.jpg" alt="" />
 			</a>
 			<h3>Mumbai</h3>
-		</article>
-		<article>
-			<a href="#" class="image">
-				<img src="images/pic03.jpg" alt="" />
-			</a>
-			<h3>Pune</h3>
-		</article>
-		<article>
-			<a href="#" class="image">
-				<img src="images/pic04.jpg" alt="" />
-			</a>
-			<h3>Nashik</h3>
 		</article>
 	</div>
 </section>
