--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Find Freelancers Online
 		</header>
 		<p>Hire expert freelancers for any job</p>
 		<ul class="actions">
-			<li><a href="#" class="button primary big">Hire</a>
+			<li><a href="{{ site.url }}/region" class="button primary big">Hire</a>
 			</li>
 			<li><a href="#" class="button big">Work</a>
 			</li>
