--- a/region.html
+++ b/region.html
@@ -13,7 +13,9 @@ title: Pick A Region
 <hr class="major">
 <div class="col-12">
 	<h3>Top Cities</h3>
-	<dl>{% for city in site.data.cities %}
-    		<dt><a href="{{ site.url }}/{{ city.name }}">{{ city.title }}</dt>
+	<dl>
+		{% for city in site.data.cities %}
+    		<dt><a href="{{ site.url }}/{{ city.name }}">{{ city.title }}, {{ city.state }}</dt>
+		{% endfor %}
 	</dl>
 </div>
