--- a/region.html
+++ b/region.html
@@ -15,7 +15,7 @@ title: Pick A Region
 	<h3>Top Cities</h3>
 	<dl>
 		{% for city in site.data.cities %}
-    		<dt><a href="{{ site.url }}/{{ city.name }}">{{ city.title }}, {{ city.state }}</dt>
+		<dt><a href="{{ site.url }}/{{ city.name }}">{{ city.title }}, {{ city.state }}</a></dt>
 		{% endfor %}
 	</dl>
 </div>
