--- a/region.html
+++ b/region.html
@@ -4,16 +4,15 @@ title: Pick A Region
 ---
 
 <div class="col-12">
-	<section id="search" class="alt">
-		<form method="post" action="#">
-			<input type="text" name="query" id="query" placeholder="Search">
-		</form>
+	<section id="search search-container" class="alt">
+		<input type="text"  id="search-input" name="query" placeholder="Search your city">
+		<ul class="alt" id="results-container"></ul>
 	</section>
 </div>
 <hr class="major">
 <div class="col-12">
 	<h3>Top Cities</h3>
-	<ul>
+	<ul class="alt">
 		{% for city in site.data.cities %}
 		<li><a href="{{ site.url }}/{{ city.name }}">{{ city.title }}, {{ city.state }}</a></li>
 		{% endfor %}
