--- a/region.html
+++ b/region.html
@@ -4,9 +4,13 @@ title: Pick A Region
 ---
 
 <div class="col-12">
-	<section id="search search-container" class="alt">
-		<input type="text"  id="search-input" name="query" placeholder="Search your city">
-		<ul class="alt" id="results-container"></ul>
+	<section id="search" class="alt">
+		<form>
+			<div id="search-container"
+			<input type="text"  id="search-input" name="query" placeholder="Search your city">
+			<ul class="alt" id="results-container"></ul>
+			</div>
+		</form>
 	</section>
 </div>
 <hr class="major">
