--- a/region.html
+++ b/region.html
@@ -5,7 +5,7 @@ title: Pick A Region
 
 <div class="col-12">
 	<section id="search" class="alt">
-		<form  id="search-container"
+		<form  id="search-container">
 			<input type="text"  id="search-input" name="query" placeholder="Search your city">
 			<ul class="alt" id="results-container"></ul>
 		</form>
