--- a/region.html
+++ b/region.html
@@ -3,7 +3,7 @@ layout: page
 title: Pick A Region
 ---
 
-<div class="col-12">
+<div class="col-12" id="menu">
 	<section id="search" class="alt">
 		<form  id="search-container">
 			<input type="text"  id="search-input" name="query" placeholder="Search your city">
@@ -12,7 +12,7 @@ title: Pick A Region
 	</section>
 </div>
 <hr class="major">
-<div class="col-12">
+<div class="col-12" id="menu">
 	<h3>Top Cities</h3>
 	<ul class="alt">
 		{% for city in site.data.cities %}
