--- a/region.html
+++ b/region.html
@@ -20,3 +20,12 @@ title: Pick A Region
 		{% endfor %}
 	</ul>
 </div>
+
+
+<script>
+SimpleJekyllSearch({
+  searchInput: document.getElementById('search-input'),
+  resultsContainer: document.getElementById('results-container'),
+  json: '{{ site.url }}/search.json'
+})
+</script>
