--- a/region.html
+++ b/region.html
@@ -29,3 +29,5 @@ SimpleJekyllSearch({
   json: '{{ site.url }}/search.json'
 })
 </script>
+
+<script src="{{ site.url }}/assets/js/search.js"></script>
