--- a/region.html
+++ b/region.html
@@ -21,7 +21,7 @@ title: Pick A Region
 	</ul>
 </div>
 
-<script src="{{ site.url }}/assets/js/search.js"></script>
+<script src="{{ site.url }}/assets/js/search.js" type="text/javascript"></script>
 
 <script>
 SimpleJekyllSearch({
