--- a/work.html
+++ b/work.html
@@ -3,7 +3,7 @@ layout: page
 title: Become A Freelancer
 ---
 
-<form action="https://formspree.io/mgekajpd" method="POST">
+<form action="mailto:you@arigato.in@yahoo.com" method="POST">
 	<div class="row gtr-uniform">
 		<div class="col-6 col-12-xsmall">
 			<input type="text" name="name" id="name" placeholder="Name" />
