--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Find Freelancers Online
 		<ul class="actions">
 			<li><a href="{{ site.url }}/region" class="button primary big">Hire</a>
 			</li>
-			<li><a href="#" class="button big">Work</a>
+			<li><a href="{{ site.url }}/signup" class="button big">Work</a>
 			</li>
 		</ul>
 	</div>	
