--- a/signup.html
+++ b/signup.html
@@ -22,32 +22,40 @@ title: Become A Freelancer
 	</span>
 </section>
 
-<form action="https://formspree.io/mgekajpd" method="POST">
-	<div class="row gtr-uniform">
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="name" id="name" placeholder="Name" />
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="email" name="email" id="email" placeholder="Email" />
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="number" id="number" placeholder="Number" />
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="job" id="job" placeholder="Profession" />
-		</div>
-		<div class="col-12">
-			<textarea name="bio" id="bio" placeholder="Bio" rows="3"></textarea>
-		</div>
-		<div class="col-12">
-			<ul class="actions">
-				<li>
-					<input type="submit" value="Send" class="primary" />
-				</li>
-				<li>
-					<input type="reset" value="Reset" />
-				</li>
-			</ul>
-		</div>
+<section>
+	<header class="major">
+		<h2>Sign Up</h2>
+	</header>
+	<div class="row gtr-200">
+		<form action="https://formspree.io/mgekajpd" method="POST">
+			<div class="row gtr-uniform">
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="name" id="name" placeholder="Name" />
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<input type="email" name="email" id="email" placeholder="Email" />
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="number" id="number" placeholder="Number" />
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="job" id="job" placeholder="Profession" />
+				</div>
+				<div class="col-12">
+					<textarea name="bio" id="bio" placeholder="Bio" rows="3"></textarea>
+				</div>
+				<div class="col-12">
+					<ul class="actions">
+						<li>
+							<input type="submit" value="Send" class="primary" />
+						</li>
+						<li>
+							<input type="reset" value="Reset" />
+						</li>
+					</ul>
+				</div>
+			</div>
+		</form>
 	</div>
-</form>
+</section>
+
