--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,9 @@ title: Become A Freelancer
 					<input type="text" name="job" id="job" placeholder="Profession" />
 				</div>
 				<div class="col-6 col-12-xsmall">
-					<input type="text" name="twitter" id="twitter" placeholder="Twitter username (optional)" />
+					<abbr title="Arigato will fetch your Twitter dp">
+						<input type="text" name="twitter" id="twitter" placeholder="Twitter username (optional)" />
+					</abbr>
 				</div>
 				<div class="col-12">
 					<textarea name="bio" id="bio" placeholder="Bio" rows="3"></textarea>
