--- a/signup.html
+++ b/signup.html
@@ -58,3 +58,25 @@ title: Become A Freelancer
 	</div>
 </section>
 
+<section>
+	<header class="major">
+		<h2>There’s a plan for you.</h2>
+	</header>
+	<div class="posts">
+		<article>
+			<div class="box">
+				<h3>Basic.</h3>
+				<p>Flexible for Everyone</p>
+				<hr>
+				<h1>₹200</h1>
+				<p>per month, billed yearly</p>
+				<ul class="actions">
+					<li><a href="https://arindia.github.io/beta/region" class="button primary fit">Hire</a>
+					</li>
+				</ul>
+				<p>Open your page with a powerful, flexible platform designed to grow with you.</p>
+			</div>
+		</article>
+	</div>
+</section>
+
