--- a/signup.html
+++ b/signup.html
@@ -18,6 +18,28 @@ title: Become A Freelancer
 
 <section>
 	<header class="major">
+		<h2>There’s a plan for you.</h2>
+	</header>
+	<div class="posts">
+		<article>
+			<div class="box">
+				<h3>Basic.</h3>
+				<p>Flexible for Everyone</p>
+				<hr>
+				<h1>₹200</h1>
+				<p>per month, billed yearly</p>
+				<ul class="actions">
+					<li><a href="/#signup" class="button primary fit">Sign Up</a>
+					</li>
+				</ul>
+				<p>Open your page with a powerful, flexible platform designed to grow with you.</p>
+			</div>
+		</article>
+	</div>
+</section>
+
+<section id="signup">
+	<header class="major">
 		<h2>Sign Up</h2>
 	</header>
 	<div class="row gtr-200">
@@ -55,28 +77,6 @@ title: Become A Freelancer
 				</div>
 			</div>
 		</form>
-	</div>
-</section>
-
-<section>
-	<header class="major">
-		<h2>There’s a plan for you.</h2>
-	</header>
-	<div class="posts">
-		<article>
-			<div class="box">
-				<h3>Basic.</h3>
-				<p>Flexible for Everyone</p>
-				<hr>
-				<h1>₹200</h1>
-				<p>per month, billed yearly</p>
-				<ul class="actions">
-					<li><a href="https://arindia.github.io/beta/region" class="button primary fit">Hire</a>
-					</li>
-				</ul>
-				<p>Open your page with a powerful, flexible platform designed to grow with you.</p>
-			</div>
-		</article>
 	</div>
 </section>
 
