--- a/signup.html
+++ b/signup.html
@@ -38,6 +38,38 @@ title: Become A Freelancer
 	</div>
 </section>
 
+<section>
+	<header class="major">
+		<h2>Why Arigato?</h2>
+	</header>
+	<div class="features">
+		<article>	<span class="icon solid fa-bolt"></span>
+			<div class="content">
+				<h3>Grow your business</h3>
+				<p>Get new customers looking for service professionals like you</p>
+			</div>
+		</article>
+		<article>	<span class="icon solid fa-shower"></span>
+			<div class="content">
+				<h3>Work on your own terms</h3>
+				<p>Quote your own price and choose the customer requests that interest you</p>
+			</div>
+		</article>
+		<article>	<span class="icon solid fa-leaf"></span>
+			<div class="content">
+				<h3>Get customer requests</h3>
+				<p>Get connected with customers looking for your service</p>
+			</div>
+		</article>
+		<article>	<span class="icon solid fa-camera-retro"></span>
+			<div class="content">
+				<h3>Chat and get hired</h3>
+				<p>Chat with the customers, finalise the quotes and get hired</p>
+			</div>
+		</article>
+	</div>
+</section>
+
 <section id="signup">
 	<header class="major">
 		<h2>Sign Up</h2>
