--- a/signup.html
+++ b/signup.html
@@ -29,7 +29,7 @@ title: Become A Freelancer
 				<h1>₹200</h1>
 				<p>per month, billed yearly</p>
 				<ul class="actions">
-					<li><a href="/#signup" class="button primary fit">Sign Up</a>
+					<li><a href="{{site.url}}{{page.url}}/#signup" class="button primary fit">Sign Up</a>
 					</li>
 				</ul>
 				<p>Open your page with a powerful, flexible platform designed to grow with you.</p>
