--- a/index.html
+++ b/index.html
@@ -21,55 +21,28 @@ title: Find Freelancers Online
 		<img src="https://images.pexels.com/photos/7096/people-woman-coffee-meeting.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" />
 	</span>
 </section>
+
 <!-- Section -->
 <section>
 	<header class="major">
-		<h2>Top Categories</h2>
-	</header>
-	<div class="features">
-		<article>
-			<span class="icon solid fa-bolt"></span>
-			<div class="content">
-				<h3>Electricians</h3>
-			</div>
-		</article>
-		<article>
-			<span class="icon solid fa-shower"></span>
-			<div class="content">
-				<h3>Plumbers</h3>
-			</div>
-		</article>
-		<article>
-			<span class="icon solid fa-leaf"></span>
-			<div class="content">
-				<h3>Gardeners</h3>
-			</div>
-		</article>
-		<article>
-			<span class="icon solid fa-camera-retro"></span>
-			<div class="content">
-				<h3>Photographers</h3>
-			</div>
-		</article>
-	</div>
-</section>
-<!-- Section -->
-<section>
-	<header class="major">
-		<h2>Serving In</h2>
+		<h2>Electricians</h2>
 	</header>
 	<div class="posts">
 		<article>
-			<a href="{{ site.url }}/nagpur" class="image">
-				<img src="images/nagpur.jpg" alt="" />
+			<a href="#" class="image right">
+				<img src="https://twitter.com/vinaiak/photo" alt="" />
 			</a>
-			<h3>Nagpur</h3>
+			<h3>Vinay Bhadikar</h3>
+			<p>Ravi Nagar</p>
+			<a href="#" class="button">Hire</a>
 		</article>
 		<article>
-			<a href="#" class="image">
-				<img src="images/mumbai.jpg" alt="" />
+			<a href="#" class="image right">
+				<img src="https://twitter.com/vinaiak/photo" alt="" />
 			</a>
-			<h3>Mumbai</h3>
+			<h3>Vinay Bhadikar</h3>
+			<p>Friends Colony</p>
+			<a href="#" class="button">Hire</a>
 		</article>
 	</div>
 </section>
