--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Find Freelancers Online
 	<div class="posts">
 		<article>
 			<a href="#" class="image right">
-				<img src="https://twitter.com/vinaiak/photo" alt="" />
+				<img src="http://s.gravatar.com/avatar/c50b79643a6a4fdbd2aceb4a5ab7f763?s=80" alt="" />
 			</a>
 			<h3>Vinay Bhadikar</h3>
 			<p>Ravi Nagar</p>
@@ -38,7 +38,7 @@ title: Find Freelancers Online
 		</article>
 		<article>
 			<a href="#" class="image right">
-				<img src="https://twitter.com/vinaiak/photo" alt="" />
+				<img src="http://s.gravatar.com/avatar/c50b79643a6a4fdbd2aceb4a5ab7f763?s=80" alt="" />
 			</a>
 			<h3>Vinay Bhadikar</h3>
 			<p>Friends Colony</p>
