--- a/index.html
+++ b/index.html
@@ -22,27 +22,21 @@ title: Find Freelancers Online
 	</span>
 </section>
 
-<!-- Section -->
+{% for freelancer in site.freelancers %}
 <section>
 	<header class="major">
-		<h2>Electricians</h2>
+		<h2><a href="{{ site.baseurl }}{{ freelancer.url }}">{{ freelancer.name }}s</a>&ensp;<i class="fas fa-long-arrow-alt-right"></i></h2>
 	</header>
 	<div class="posts">
+		{% for post in site.categories.[freelancer.title] %}
 		<article>
-			<a href="#" class="image right">
-				<img src="http://s.gravatar.com/avatar/c50b79643a6a4fdbd2aceb4a5ab7f763?s=80" alt="" />
+			<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}" class="image right">
+				<img src="{{ post.image }}" alt="" />
 			</a>
-			<h3>Vinay Bhadikar</h3>
-			<p>Ravi Nagar</p>
-			<a href="#" class="button">Hire</a>
+			<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
+			<p>{{ post.region }}</p>
 		</article>
-		<article>
-			<a href="#" class="image right">
-				<img src="http://s.gravatar.com/avatar/c50b79643a6a4fdbd2aceb4a5ab7f763?s=80" alt="" />
-			</a>
-			<h3>Vinay Bhadikar</h3>
-			<p>Friends Colony</p>
-			<a href="#" class="button">Hire</a>
-		</article>
+		{% endfor %}
 	</div>
 </section>
+{% endfor %}
