--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Find Freelancers Online
 	<div class="posts">
 		{% for post in site.categories.[freelancer.title] %}
 		<article>
-			<a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}" class="image right">
+			<a href="{{ site.baseurl }}{{ post.url }}" class="image right">
 				<img src="{{ post.image }}" alt="" />
 			</a>
 			<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
