--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@ title: Find Freelancers Online
 	<div class="posts">
 		{% for post in site.categories.[freelancer.name] %}
 		<article>
+			{% if post.image %}
 			<a href="{{ site.baseurl }}{{ post.url }}" class="image right">
 				<img src="{{ post.image }}" alt="" />
 			</a>
+			{% endif %}
 			<h3><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h3>
 			<p>{{ post.region }}</p>
 		</article>
