--- a/signup.html
+++ b/signup.html
@@ -3,55 +3,37 @@ layout: page
 title: Become A Freelancer
 ---
 
-<form method="post" action="#">
+<form method="POST" action="https://formspree.io/mgekajpd">
 			<div class="row gtr-uniform">
 				<div class="col-6 col-12-xsmall">
-					<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name">
+					<input type="text" name="title" id="title" placeholder="Name">
 				</div>
 				<div class="col-6 col-12-xsmall">
-					<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email">
+					<input type="email" name="email" id="email" placeholder="Email">
 				</div>
-				<!-- Break -->
-				<div class="col-12">
-					<select name="demo-category" id="demo-category">
-						<option value="">- Category -</option>
-						<option value="1">Manufacturing</option>
-						<option value="1">Shipping</option>
-						<option value="1">Administration</option>
-						<option value="1">Human Resources</option>
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="phone" id="phone" placeholder="Phone">
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="profession" id="profession" placeholder="Profession">
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="bio" id="bio" placeholder="Introduction">
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<input type="text" name="region" id="region" placeholder="Region">
+				</div>
+				<div class="col-6 col-12-xsmall">
+					<select name="plan" id="plan">
+						<option value="0" selected="">Plan</option>
+						<option value="Basic.">Basic.</option>
+						<option value="Premium.">Premium.</option>
 					</select>
 				</div>
-				<!-- Break -->
-				<div class="col-4 col-12-small">
-					<input type="radio" id="demo-priority-low" name="demo-priority" checked="">
-					<label for="demo-priority-low">Low</label>
-				</div>
-				<div class="col-4 col-12-small">
-					<input type="radio" id="demo-priority-normal" name="demo-priority">
-					<label for="demo-priority-normal">Normal</label>
-				</div>
-				<div class="col-4 col-12-small">
-					<input type="radio" id="demo-priority-high" name="demo-priority">
-					<label for="demo-priority-high">High</label>
-				</div>
-				<!-- Break -->
-				<div class="col-6 col-12-small">
-					<input type="checkbox" id="demo-copy" name="demo-copy">
-					<label for="demo-copy">Email me a copy</label>
-				</div>
-				<div class="col-6 col-12-small">
-					<input type="checkbox" id="demo-human" name="demo-human" checked="">
-					<label for="demo-human">I am a human</label>
-				</div>
-				<!-- Break -->
-				<div class="col-12">
-					<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-				</div>
-				<!-- Break -->
-				<div class="col-12">
+				<div class="col-6 col-12-xsmall">
 					<ul class="actions">
 						<li>
-							<input type="submit" value="Send Message" class="primary">
+							<input type="submit" value="Sign Up" class="primary">
 						</li>
 						<li>
 							<input type="reset" value="Reset">
