--- a/signup.html
+++ b/signup.html
@@ -18,9 +18,6 @@ title: Become A Freelancer
 			<input type="text" name="profession" id="profession" placeholder="Profession">
 		</div>
 		<div class="col-6 col-12-xsmall">
-			<input type="text" name="bio" id="bio" placeholder="Introduction">
-		</div>
-		<div class="col-6 col-12-xsmall">
 			<input type="text" name="region" id="region" placeholder="Region">
 		</div>
 		<div class="col-6 col-12-xsmall">
@@ -29,6 +26,9 @@ title: Become A Freelancer
 				<option value="Basic.">Basic.</option>
 				<option value="Premium.">Premium.</option>
 			</select>
+		</div>
+		<div class="col-12">
+			<textarea name="bio" id="bio" placeholder="Introduction" rows="4"></textarea>
 		</div>
 		<div class="col-6 col-12-xsmall">
 			<ul class="actions">
