--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Find Freelancers Online
 		</ul>
 	</div>	
 	<span class="image object">
-		<img src="https://images.pexels.com/photos/7096/people-woman-coffee-meeting.jpg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" />
+		<img src="{{ site.url }}/images/banner.png" alt="" />
 	</span>
 </section>
 
