--- a/signup.html
+++ b/signup.html
@@ -1,44 +1,57 @@
 ---
-layout: page
+layout: default
 title: Become A Freelancer
 ---
 
-<form method="POST" action="https://formspree.io/mgekajpd">
-	<div class="row gtr-uniform">
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="title" id="title" placeholder="Name">
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="email" name="email" id="email" placeholder="Email">
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="phone" id="phone" placeholder="Phone">
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="profession" id="profession" placeholder="Profession">
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<input type="text" name="region" id="region" placeholder="Region">
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<select name="plan" id="plan">
-				<option value="0" selected="">Plan</option>
-				<option value="Basic.">Basic.</option>
-				<option value="Premium.">Premium.</option>
-			</select>
-		</div>
-		<div class="col-12">
-			<textarea name="bio" id="bio" placeholder="Introduction" rows="4"></textarea>
-		</div>
-		<div class="col-6 col-12-xsmall">
-			<ul class="actions">
-				<li>
-					<input type="submit" value="Sign Up" class="primary">
-				</li>
-				<li>
-					<input type="reset" value="Reset">
-				</li>
-			</ul>
-		</div>
+<!-- Banner -->
+<section id="banner">
+	<div class="content">
+		<header>
+			<h1>Become A Freelancer</h1>
+		</header>
+		<p>Get connected with customers looking for your service</p>
 	</div>
-</form>
+</section>
+
+
+<section>
+	<form method="POST" action="https://formspree.io/mgekajpd">
+		<div class="row gtr-uniform">
+			<div class="col-6 col-12-xsmall">
+				<input type="text" name="title" id="title" placeholder="Name">
+			</div>
+			<div class="col-6 col-12-xsmall">
+				<input type="email" name="email" id="email" placeholder="Email">
+			</div>
+			<div class="col-6 col-12-xsmall">
+				<input type="text" name="phone" id="phone" placeholder="Phone">
+			</div>
+			<div class="col-6 col-12-xsmall">
+				<input type="text" name="profession" id="profession" placeholder="Profession">
+			</div>
+			<div class="col-6 col-12-xsmall">
+				<input type="text" name="region" id="region" placeholder="Region">
+			</div>
+			<div class="col-6 col-12-xsmall">
+				<select name="plan" id="plan">
+					<option value="0" selected="">Plan</option>
+					<option value="Basic.">Basic.</option>
+					<option value="Premium.">Premium.</option>
+				</select>
+			</div>
+			<div class="col-12">
+				<textarea name="bio" id="bio" placeholder="Introduction" rows="4"></textarea>
+			</div>
+			<div class="col-6 col-12-xsmall">
+				<ul class="actions">
+					<li>
+						<input type="submit" value="Sign Up" class="primary">
+					</li>
+					<li>
+						<input type="reset" value="Reset">
+					</li>
+				</ul>
+			</div>
+		</div>
+	</form>
+</section>
