--- a/report.html
+++ b/report.html
@@ -19,6 +19,13 @@ title: Report A Problem
 			<div class="col-6 col-12-xsmall">
 				<input type="url" name="url" id="url" placeholder="Url">
 			</div>
+			<div class="col-6 col-12-xsmall">
+				<select name="report" id="report">
+					<option value="0" selected="">Select</option>
+					<option value="Profile">Profile</option>
+					<option value="Other">Other</option>
+				</select>
+			</div>
 			<div class="col-12">
 				<textarea name="details" id="details" placeholder="Description" rows="4"></textarea>
 			</div>
