--- a/update.html
+++ b/update.html
@@ -9,7 +9,7 @@ title: Update Your Profile
 		<header>
 			<h1>Update Your Profile</h1>
 		</header>
-		<p>We’ll send you a verification email to confirm your update.</p>
+		<p>It takes upto 90 days for updation in Profile after the request.</p>
 	</div>
 </section>
 
