--- a/report.html
+++ b/report.html
@@ -14,7 +14,7 @@ title: Report A Problem
 </section>
 
 <section>
-	<form method="POST" action="https://formspree.io/mgekajpd">
+	<form method="POST" action="https://formspree.io/mwkbplwe">
 		<div class="row gtr-uniform">
 			<div class="col-6 col-12-xsmall">
 				<input type="url" name="url" id="url" placeholder="Url">
