--- a/update.html
+++ b/update.html
@@ -14,7 +14,7 @@ title: Update Your Profile
 </section>
 
 <section>
-	<form method="POST" action="https://formspree.io/mgekajpd">
+	<form method="POST" action="https://formspree.io/mdozkepg">
 		<div class="row gtr-uniform">
 			<div class="col-6 col-12-xsmall">
 				<input type="email" name="email" id="email" placeholder="Email">
