--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Find Freelancers Online
 		</ul>
 	</div>	
 	<span class="image object">
-		<img src="{{ site.url }}/images/banner.png" alt="" />
+		<img src="https://images.unsplash.com/photo-1485182708500-e8f1f318ba72?ixlib=rb-1.2.1&auto=format&fit=crop&w=785&q=80" alt="" />
 	</span>
 </section>
 
